--- a/src/css/tarefas.scss
+++ b/src/css/tarefas.scss
@@ -25,6 +25,8 @@ input, label {
 }
 
 .fixed_headers {
+  border-radius: 1rem;
+  box-shadow: 1px 1px 10px #000;
   margin:auto;
   width: 900px;
   table-layout: fixed;
